# LibreSplit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
src/: errors.c  errors.h  fileformat.c  fileformat.h  main.c  settings.c  timer.c  timer.h
tests/: CMakeLists.txt  assert_macro.h  startup_tests.c  startup_tests.h
